update index.ejs, header.ejs, main.css

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,7 +2,14 @@ html {
     font-family: 'Roboto', sans-serif;
 }
 
+article{
+    display: flex;
+    justify-content: center;
+}
 
+#searchfield {
+
+}
 
 footer {
 
