--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,7 @@
     </head>
     <body>
         <nav>
-            
+            <!--  button to change the units of measurements, for example:  K (default unit) / °C (metric unit) / °F (imperial unit) -->
+            <!-- button to change the language -->
         </nav>
         <main>
