--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,16 +2,51 @@ html {
     font-family: 'Roboto', sans-serif;
 }
 
-article{
+body {
+    height: 100vh;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+main {
+    width: 100%;
+}
+
+form {
+    margin: 10% auto;
     display: flex;
     justify-content: center;
 }
 
 #searchfield {
+    width: 75%;
+    height: 2rem;
+    border-radius: 8px 8px;
+    border: 2px solid black;
+    box-shadow: 0px 0px 10px grey;
+}
 
+#searchfield:focus {
+    border: 3px solid orangered;
+    outline: none !important;
+}
+
+article {
+    width: 75%;
+    height: auto;
+    padding: 10px;
+    margin: 0 auto;
+    border-radius: 8px 8px;
+    border: 2px solid black;
+    box-shadow: 0px 0px 10px grey;
+    overflow: auto;
 }
 
 footer {
-
+    width: 100%;
+    position: absolute;
+    bottom: 0;
     text-align: center;
+    
 }
