--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,25 +6,32 @@ body {
     height: 100vh;
     margin: 0;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+    background: rgb(251,245,239);
+    background: linear-gradient(0deg, rgba(251,245,239,1) 0%, rgba(183,216,222,1) 100%);
+    overflow: auto;
 }
 
 main {
     width: 100%;
+    margin-top: 0;
 }
 
 form {
-    margin: 10% auto;
+    margin: 20px auto;
     display: flex;
     justify-content: center;
+    width: 75%;
 }
 
 #searchfield {
-    width: 75%;
+    width: 100%;
     height: 2rem;
+    background: #fbf5ef;
     border-radius: 8px 8px;
-    border: 2px solid black;
-    box-shadow: 0px 0px 10px grey;
+    border: 2px solid #fe7236;
+    box-shadow: 0px 6px 6px 3px #fe723640;
 }
 
 #searchfield:focus {
@@ -33,20 +40,85 @@ form {
 }
 
 article {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    gap: 2.5px;
     width: 75%;
     height: auto;
     padding: 10px;
-    margin: 0 auto;
+    margin: 20px auto;
+    background: #fbf5ef;
     border-radius: 8px 8px;
-    border: 2px solid black;
-    box-shadow: 0px 0px 10px grey;
+    border: 2px solid #fe7236;
+    box-shadow: 0px 6px 6px 3px #fe723640;
     overflow: auto;
 }
 
+.date {
+    font-size: 0.7rem;
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
+    justify-self: end;
+}
+
+.weatherIcon {
+    grid-column: 1;
+    grid-row: 2;
+    filter: drop-shadow(10px 10px #80808040);
+    align-self: end;
+    justify-self: start;
+    margin-bottom: 0;
+}
+
+.weatherDescription {
+    grid-column: 1;
+    grid-row: 3;
+    justify-self: start;
+    align-self: start;
+    margin-top: 0;
+}
+
+.city {
+    font-size: 2.5rem;
+    grid-column: 2;
+    grid-row: 2;
+    align-self: end;
+    margin-bottom: 0;
+}
+
+.temp {
+    grid-column: 3;
+    grid-row: 2 / 4;
+    font-size: 1.5rem;
+    justify-self: center;
+    align-self: center;
+}
+
+.tempMinMax {
+    grid-column: 2;
+    grid-row: 3;
+    margin-top: 0;
+}
+
+.tempFeelsLike {
+    grid-column: 1 / 4;
+    grid-row: 4;
+}
+
+.humidity {
+    grid-column: 1 / 4;
+    grid-row: 5;
+}
+
+.windspeed {
+    grid-column: 1 / 4;
+    grid-row: 6;
+}
+
 footer {
+    margin-top: 2rem;
     width: 100%;
-    position: absolute;
-    bottom: 0;
+    bottom: 0;    
     text-align: center;
-    
+    position: absolute;
 }
